# cm-bootcamp-2023

./: .gitignore  README.md  pyproject.toml
app/models/: artprice_nasnet_2_dense_layers.mlem  nasnetmobile_2_dense_layers.mlem  price_keras_preprocess.mlem
app/models/nasnetmobile_2_dense_layers/: NASNetMobile + 2 dense layers.ipynb
bot/: bot.py  fly.toml
fastapi-deployment/: app.mlem  build_docker.sh  deploy_docker.sh  deploy_with_monitoring.py  nasnetmobile_2_dense_layers.mlem  nasnetmobile_2_layers_exc.mlem  price.mlem  price_keras_preprocess.mlem  serve.sh  serve_with_monitoring.py
fastapi-deployment/dockerdir/: Dockerfile  fly.toml  model.mlem  requirements.txt
fastapi-deployment/dockerdir/modelc/: postprocess
fastapi-deployment/models/colmach_baseline/: baseline_model.ipynb  preprocess
fastapi-deployment/models/nasnet_2_layers_exc/: cm-bootcamp-2023.ipynb  cm-bootcamp-2023_200x200.ipynb  preprocess
fastapi-deployment/models/nasnet_log_prices/: Nasnet_with_log_prices.ipynb
fastapi-deployment/models/nasnetmobile_2_dense_layers/: NASNetMobile + 2 dense layers + loss mae.ipynb  preprocess
parser/: artprice_com.ipynb
