[tool.poetry]
name = "cm-bootcamp-2023"
version = "0.1.0"
description = ""
authors = ["ruaniah <artem.nikitin@raiffeisen.ru>"]
readme = "README.md"
packages = [{include = "cm_bootcamp_2023"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "1.23.5"
numba = "^0.56.4"
evidently = "^0.3.0"
python-telegram-bot = "^20.2"
mlem = "^0.4.10"
tensorflow = "2.11.0"
torch = "2.0.0"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
