[tool.poetry]
name = "cm-bootcamp-2023"
version = "0.1.0"
description = ""
authors = ["ruaniah <artem.nikitin@raiffeisen.ru>"]
readme = "README.md"
packages = [{include = "cm_bootcamp_2023"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
numpy = "1.21.6"
numba = "^0.56.4"
evidently = "^0.3.0"
python-telegram-bot = "^20.2"
mlem = {extras = ["flyio", "streamlit"], version = "^0.4.12"}
tensorflow = "2.11.0"
torch = "^2.0.0"
ipykernel = "^6.22.0"
keras-preprocessing = "^1.1.2"
pillow = "^9.5.0"
coolname = "^2.2.0"
prometheus-fastapi-instrumentator = "^6.0.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
streamlit = "^1.21.0"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
